style.css
@import url("cmm/style.css");

.navbar, .navbar .dropdown-item {
  --navbar-main-color: #337ab7;
	--bs-navbar-color: var(--navbar-main-color);
	--bs-dropdown-link-color: var(--navbar-main-color);
}

.collapse-navbar-collapse {
	text-align: left;
}

.title, h2 {
  color: #265418;
}

.title h1 {
  /*  font-family: 'Sriracha', cursive;*/
}

.title h2 {
  font-family: 'Waiting for the Sunrise', cursive;
}

.intro-header {
	text-align: center;
	display: flex;
}

.container {
	display: flex;
	flex-flow: wrap;
}

.container > * {
  flex: 1 100%;
}

.nav a {
  text-transform: uppercase;
}

.main {
  flex: 2 0px;
  order: 2;
}

.aside-1 {
  order: 1;
}

.aside-2 {
  order: 3;
}

.footer-pasto .container > div:first-child {
	padding-top: 120px;
}

.footer-pasto {
  font-size: x-small;
	background-image: url("images/pasto.svg");
  background-position: top center;
  background-repeat: repeat-x;
  min-height: 180px;
}

#attr-desc {
	display: none;
}

.dia-shell {
	margin-top: 1em;
  position: relative;
  padding: 0;
}

.dia-shell.fullscreen {
  background-color: white;
  margin: 0;
  width: 100%;
  height: 100%;
}

.dia-shell .btn-toolbar {
  position: absolute;
  top: 20px;
  --tb-width: 250px;
  width: var(--tb-width);
  left: calc(100% - var(--tb-width));
}

.dia-shell .btn {
  --bs-btn-bg: white;
}

.btn-toolbar .btn[aria-label] {
  position: relative;
}

.btn-toolbar .btn[aria-label]::after {
  content: attr(aria-label);

  position: absolute;
  top: 45px;
  right: -20px;

  pointer-events: none;
  opacity: 0;
  transition: opacity .15s ease-in-out;

  display: block;
  white-space: nowrap;
  font-size: 12px;
  line-height: 16px;
  color: black;
  background: #fefdcd;
  padding: 1ex 1ex;
  border: 1px solid #c0c0c0;
  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.4);
}

.btn-toolbar .btn[aria-label]:hover::after {
  opacity: 1;
}

.diagram {
	width: 100%;
}

.diagram > svg {
  cursor: move;
}

#infobox {
  top: 50%;
  z-index: 1;
  display: none;
}

#legend {
  top: 24px;
}

#legend .textbox-box {
  display: inline-block;
  width: 2.5em;
  height: 1.25em;
  margin-right: 1ex;
  background: linear-gradient(0deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.45) 100%), var(--fill);
  border: 1px solid #999;
  vertical-align: text-top;
}

#legend .cont div:first-child {
  padding-right: 2em;
}

.floatbox, .dia-shell, .dia-shell .btn-toolbar .btn-group {
  border: 1px solid black;
  box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
}

.floatbox {
  cursor: grab;
  position: absolute;
  left: 24px;
  min-width: 350px;
  max-width: calc(100% - 40px);
	padding: 1em;
	background-color: white;
}

.floatbox button.btn-close {
  float: right;
}

.floatbox h2 {
	margin-top: 0;
  margin-right: 1em;
  white-space: nowrap;
}

.floatbox p {
  max-width: 350px;
}

.floatbox p:last-child {
  margin-bottom: 0;
}

.floatbox p > span {
  background-color: white;
}

.affix {
	width: 100%;
	z-index: 1;
	top: 0;
	left: 0;
	margin: 0;
}

text {
  font: 14px sans-serif;
}

.box-bg {
  fill: white;
  stroke: black;
}

.textbox-box.box-distancia {
	--fill: gray;
}

.textbox-box.box-tamaño {
	--fill: red;
}

.textbox-box {
  fill: var(--fill);
}

.textbox-bg-stop1 {
	stop-color: rgba(255,255,255,0.45);
}

.textbox-bg-stop2 {
	stop-color: rgba(255,255,255,0.20);
}

.textbox-bg {
	stroke-width: 1px;
	stroke: #999;
	fill: url(#textbox-bg-gradient);
}

.textbox-text {
  font: 24px sans-serif;
	padding: 15px;
}

.objects-label {
	z-index: 200;
}

.objects-label-text {
	fill: black;
}

.objects-label-box {
	fill: white;
}

.attributes-label {
	z-index: 200;
}

.attributes-label.hasexp, .attributes-label.hasexp * {
  cursor: pointer;
}

.attributes-label-text {
	font-style: italic;
	fill: black;
}

.node .node-dot * {
	cursor: pointer;
}

.node * {
  cursor: grab;
}

.drag * {
	cursor: grabbing !important;
}

.node-bg {
	fill: white;
	stroke: none;
}

.node-basic {
	fill: none;
	stroke: #753917;
	stroke-width: var(--node-stroke-width);
}

.node-new-attribute {
	fill: gray;
	stroke: none;
}

.node-new-object {
	fill: #392e0d;
	stroke: none;
}

.fixed .node-bg {
	stroke-width: 10px;
	stroke: #dd0;
}

.link {
  stroke: #753917;
  stroke-width: var(--link-width);
	z-index: 200;
}

.link.infimum:not(.active), .node.infimum:not(.active) .node-basic {
  opacity: 0.1;
}

.link.inactive,
.node.inactive .node-basic,
.node.inactive .node-new-attribute,
.node.inactive .node-new-object,
.node.inactive .attributes-label,
.node.inactive .objects-label
{
	opacity: 0.25;
}

.node.inactive .node-bg {
	opacity: 1;
}

#forkongithub a {
  background: #000;
  color: #fff;
  text-decoration: none;
  font-family: arial, sans-serif;
  text-align: center;
  font-weight: bold;
  padding: 5px 40px;
  font-size: 0.5rem;
  line-height: 1rem;
  position: relative;
  transition: 0.5s;
  opacity: 0.5;
}

#forkongithub a:hover {
  background: #c11;
  color: #fff;
  opacity: 1;
}

#forkongithub a::before, #forkongithub a::after {
  content: "";
  width: 100%;
  display: block;
  position: absolute;
  top: 1px;
  left: 0;
  height: 1px;
  background: #fff;
}

#forkongithub a::after {
  bottom: 1px;
  top: auto;
}

@media screen and (min-width: 800px) {
  #forkongithub {
    position: absolute;
    display: block;
    top: -25px;
    right: 0;
    width: 200px;
    overflow: hidden;
    height: 200px;
    z-index: 9999;
    white-space: nowrap;
  }

  #forkongithub a {
    width: 200px;
    position: absolute;
    top: 60px;
    right: -60px;
    transform: rotate(45deg);
  }
}

